#61 Compile JavaFX plugin against Java 8