@@ -31,17 +31,19 @@ package org.openjfx.gradle.tasks;
 
 import org.gradle.api.DefaultTask;
 import org.gradle.api.GradleException;
+import org.gradle.api.JavaVersion;
 import org.gradle.api.Project;
 import org.gradle.api.plugins.ApplicationPlugin;
 import org.gradle.api.tasks.JavaExec;
 import org.gradle.api.tasks.TaskAction;
-import org.javamodularity.moduleplugin.extensions.RunModuleOptions;
 import org.openjfx.gradle.JavaFXModule;
 import org.openjfx.gradle.JavaFXOptions;
 import org.openjfx.gradle.JavaFXPlatform;
 
 import javax.inject.Inject;
 import java.io.File;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -67,22 +69,40 @@ public class ExecTask extends DefaultTask {
 
     @TaskAction
     public void action() {
+        if (! JavaVersion.current().isJava11Compatible()) {
+            return;
+        }
         if (execTask != null) {
             JavaFXOptions javaFXOptions = project.getExtensions().getByType(JavaFXOptions.class);
             JavaFXModule.validateModules(javaFXOptions.getModules());
 
-            var definedJavaFXModuleNames = new TreeSet<>(javaFXOptions.getModules());
+            TreeSet<String> definedJavaFXModuleNames = new TreeSet<>(javaFXOptions.getModules());
             if (!definedJavaFXModuleNames.isEmpty()) {
-                RunModuleOptions moduleOptions = execTask.getExtensions().findByType(RunModuleOptions.class);
+                Class<?> runModuleOptions;
+                try {
+                    runModuleOptions = Class.forName("org.javamodularity.moduleplugin.extensions.RunModuleOptions");
+                } catch (ClassNotFoundException e) {
+                    e.printStackTrace();
+                    return;
+                }
+                Object moduleOptions = execTask.getExtensions().findByType(runModuleOptions);
                 if (moduleOptions != null) {
-                    definedJavaFXModuleNames.forEach(javaFXModule -> moduleOptions.getAddModules().add(javaFXModule));
+                    definedJavaFXModuleNames.forEach(javaFXModule -> {
+                        try {
+                            Method getAddModules = runModuleOptions.getSuperclass().getSuperclass().getDeclaredMethod("getAddModules");
+                            List<String> addModules = (List<String>) getAddModules.invoke(moduleOptions);
+                            addModules.add(javaFXModule);
+                        } catch (NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
+                            e.printStackTrace();
+                        }
+                    });
                 } else {
-                    var javaFXModuleJvmArgs = List.of(
+                    List<String> javaFXModuleJvmArgs = Arrays.asList(
                             "--module-path", execTask.getClasspath()
                                     .filter(jar -> isJavaFXJar(jar, javaFXOptions.getVersion(), javaFXOptions.getPlatform()))
                                     .getAsPath());
 
-                    var jvmArgs = new ArrayList<String>();
+                    List<String> jvmArgs = new ArrayList<>();
 
                     jvmArgs.add("--add-modules");
                     jvmArgs.add(String.join(",", definedJavaFXModuleNames));
